# KTT-AutoGuider

./: .gitignore  CMakeLists.txt  README.md  autoguider.cpp  autoguider.h  command.txt  daqutils.cpp  daqutils.h  dec.cpp  dec.h  input-cloudy.txt  input-normal.txt  input-pidmode.txt  main.cpp  motorcontrols.cpp  motorcontrols.h  ra.cpp  ra.h  serialconnection.cpp  serialconnection.h  utilheaders.h  utils.cpp
