cmake_minimum_required(VERSION 3.14)
project(FPVoltageController)

set(CMAKE_CXX_STANDARD 14)
set(INCLUDE_DIR C:/PROGRA~2/NATION~1/NI-DAQ/DAQMXA~1/include)
set(INCLUDE_WINDIR C:/Windows/System32)
set(INCLUDE_lIB_DIR C:/PROGRA~2/NATION~1/NI-DAQ/DAQMXA~1/lib/msvc)
set(SOURCES main.cpp daqutils.cpp daqutils.h)
add_executable(FPVoltageController ${SOURCES})
target_include_directories(FPVoltageController PRIVATE ${INCLUDE_DIR} ${INCLUDE_WINDIR} ${INCLUDE_lIB_DIR})
target_link_libraries(FPVoltageController ${INCLUDE_lIB_DIR}/NIDAQmx.lib)